# yac

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  MCP_SERVERS.md  README.md  package.json  pyproject.toml  start-ui.sh  tsconfig.json
.claude/: settings.local.json
src/ui/: index.tsx
src/ui/bridge/: PythonBridge.ts
src/ui/components/: App.tsx  ChatInterface.tsx  Header.tsx  InputField.tsx  LoadingIndicator.tsx  MessageBubble.tsx  Sidebar.tsx  StatusBar.tsx
src/yac/: __init__.py
src/yac/cli/: __init__.py  app.py  config.py  display.py  error_handlers.py  validators.py
src/yac/mcp/: __init__.py  client.py  config.py  defaults.py  langchain_bridge.py  simple_session.py
src/yet_claude_code/cli/: __init__.py  app.py  config.py  display.py  error_handlers.py  validators.py
src/yet_claude_code/mcp/: client.py  config.py  defaults.py  langchain_bridge.py  simple_session.py
src/yet_claude_code/models/: __init__.py  message.py  provider.py  tool.py
src/yet_claude_code/providers/: __init__.py  base.py  openai.py  registry.py
tests/: test_mcp.py  test_mcp_integration.py  test_providers.py  test_validation.py
tests/mocks/: __init__.py  mock_mcp_server.py
