[project]
name = "yet-claude-code"
version = "0.1.0"
description = "Multi-model AI assistant with MCP integration"
readme = "CLAUDE.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-community",
    "pyyaml",
    "mcp>=1.0.0",
    "httpx",
    "sseclient-py",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
ycc = "yet_claude_code.cli.app:main"
yet-claude-code = "yet_claude_code.cli.app:main"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]
